k8s/apps/production/ingress.yaml
# Cấu hình IngressRoute cho Web (Frontend)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mlops-nids-nt114.id.vn`)
      kind: Rule
      services:
        - name: mlops-paas-web
          port: 80

---
# Cấu hình IngressRoute cho Control Plane (Django API & Admin)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: control-plane-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.mlops-nids-nt114.id.vn`) && (PathPrefix(`/api`) || PathPrefix(`/admin`))
      kind: Rule
      services:
        - name: mlops-paas-control-plane
          port: 8000
